test/SILOptimizer/static_report.sil
// RUN: %target-swift-frontend %s -emit-sil -verify

import Builtin

// test_static_report
sil @sil_test_static_report : $@convention(thin) (Builtin.RawPointer) -> Builtin.RawPointer {
bb0(%0 : @trivial $Builtin.RawPointer):
  %1 = integer_literal $Builtin.Int1, 1
  %3 = builtin "staticReport"(%1 : $Builtin.Int1, %1 : $Builtin.Int1, %0 : $Builtin.RawPointer) : $() // expected-error {{static report error}}
  return %0 : $Builtin.RawPointer
}
